--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Title</title>
+<link rel="stylesheet" type="text/css" href="siniauvinen.github.io/css/style.css">
 </head>
 
 <body>
