--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Title</title>
+<title>Sini tekee nettisivun</title>
 <link rel="stylesheet" type="text/css" href="siniauvinen.github.io/css/style.css">
 </head>
 
