--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Sini tekee nettisivun</title>
-    <link rel="stylesheet" type="text/css" href="siniauvinen.github.io/css/style.css">
+    <link rel="stylesheet" type="text/css" href="siniauvinen.github.io/css/styles.css">
   </head>
 
   <body>
