--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
             </div>    
         </nav> 
 
-        <div class="row quote">
-            <div class="col-sm-12 actualquote">
-                <p><b>“There are three responses to a piece of design –
-                yes, no, and WOW! Wow is the one to aim for."<br>
-                Milton Glaser</b></p>
-            </div>
-        </div> 
-
+        <div class="container">
+            <div class="row quote">
+                <div class="col-sm-12 actualquote">
+                    <p><b>“There are three responses to a piece of design –
+                    yes, no, and WOW! Wow is the one to aim for."<br>
+                    Milton Glaser</b></p>
+                </div>
+            </div> 
+        </div>
+        
         <div class="row footer mt-auto">
             <div class="col-md-12">
                 <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
