--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                     <div class="card card-body contactinfo"><i class="fas fa-phone"></i><br>+358 50 575 ****</div>
                 </div>
                 <div class="col-md-5 d-flex">
-                    <div class="card card-body contactinfo"><i class="fas fa-envelope"></i><br>siniauvinen1@gmail.com</div>
+                    <div class="card card-body contactinfo"><i class="fas fa-envelope"></i><br>sini********@gmail.com</div>
                 </div>
             </div>
         </div>
