--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
                     yes, no, and WOW! Wow is the one to aim for."<br>
                     Milton Glaser</b></p>
                 </div>
-            </div> 
+            </div>
+            <div class="row justify-content-center">
+                <a class="btn btn-custom learnmore" href="aboutme.html" role="button">LEARN MORE</a>
+            </div>    
         </div>
-        
+
         <div class="row footer mt-auto">
             <div class="col-md-12">
                 <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
